found and removed code behind latency issue - preparing to change initial artifact spawning to maze generation

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,14 @@
   padding: 2rem;
   text-align: center;
 
+  /* overflow: hidden; */
   /* font-family: 'Poppins', sans-serif; */
 }
+
+/* body,
+html {
+  overflow: hidden;
+} */
 
 .nav-button {
   margin-top: 20px;
